--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,17 @@ button.navbar-toggler{
    /* visibility: hidden; */
    display: none;
   }
+  #mypanel, #mypanel2{
+    width: 99%;
+    background-color: rgb(20, 17, 17);
+    text-align: center;
+    color: white;
+    max-height: 100vh;
+   
+    overflow-x:hidden;
+    padding : 0;
+    position: fixed;
+  }
 
 
 }
