--- a/css/index.css
+++ b/css/index.css
@@ -52,9 +52,17 @@ html, body {
 .header {
     background-color: #ed1c24;
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: xx-large;
     letter-spacing: 1px;
-    font-family: unlock, cursive;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+.regT {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+   font-size: x-large;
+   font-weight:100;
+   color: whitesmoke;
+
+  width: 1rem;
 }
 #disclaimer{
   text-align: center;
@@ -190,17 +198,6 @@ button.navbar-toggler{
   .pos-f-t{
    /* visibility: hidden; */
    display: none;
-  }
-  #mypanel, #mypanel2{
-    width: 99%;
-    background-color: rgb(20, 17, 17);
-    text-align: center;
-    color: white;
-    max-height: 100vh;
-   
-    overflow-x:hidden;
-    padding : 0;
-    position: fixed;
   }
 
 
